# Segmentation_Project

segmentation_challenge/: .gitignore  CMakeLists.txt  README.md
segmentation_challenge/include/: mask_generator.hpp  mask_image.hpp  types.hpp
segmentation_challenge/src/: main.cpp  write_png.cpp
